--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -131,3 +131,13 @@
 .cl-userButtonPopoverCard {
   background-color: var(--color-secondary);
 }
+
+.tiptap.ProseMirror {
+  outline: none;
+}
+
+.is-active {
+  background-color: #dadada;
+  border-radius: 4px;
+  padding: 0px 2px;
+}
