--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -137,7 +137,7 @@
 }
 
 .is-active {
-  background-color: #dadada;
+  background-color: #fdecec;
   border-radius: 4px;
-  padding: 0px 2px;
+  padding: 2px 2px;
 }
